Home button no longer overlaps with flower img which caused the link to only be active outside the overlapped area

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -43,7 +43,7 @@ body
 {
   clear: both;
   text-align: center;
-  padding: 30px 25px 25px 75px;
+  padding: 30px 25px 25px 125px;
 }
 
 a
